@@ -8,6 +8,7 @@
 * Fixed a bug where non-staff user would be able to open empty structure board
 * Fixed a bug where a static file from Django admin was referenced that no
   longer existed in Django 1.9 and up.
+* Fixed a bug where the migration 0018 would fail under certain databases.
 
 
 === 3.5.1 (2018-03-05) ===
